--- a/dunkin-donuts.html
+++ b/dunkin-donuts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dunkin Donut</title>
   <link rel="stylesheet" href="style2.css">
   <script src="https://kit.fontawesome.com/3e1c4fcf84.js" crossorigin="anonymous"></script>
 </head>
