--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div>
     <h1 id="header">
-      <p id="com">Come run with us! Apply to join our exceptional team here.</p>
+      <p id="com">Come run with us! Apply to join our exceptional team <a id="ere" href="">here.</a></p>
     </h1>
   </div>
   </div>
